align hero img correctly

--- a/src/css/home-styles.css
+++ b/src/css/home-styles.css
@@ -79,7 +79,6 @@ body {
     width: 100%;
     height: 70vh;
     overflow: hidden;
-    margin-top: 28px; /* Negative margin to offset body padding-top */
 }
 
 .hero .background {
